# llmops_haza_ijan_mlo24

./: README.md  pyproject.toml
03_llm_intro/: llm_intro.ipynb
04_pydanticai_structured_output/: class_exercise.ipynb  pydanticai_pydantic_models.ipynb  simulated_emlpoyees  simulated_emlpoyees.csv
04_pydanticai_structured_output/data/: education.json  mlops_raw.txt
06_pydanticai_fastapi_chatbot/: chat_agent.py  chat_eda.ipynb  data_models.py  frontend.py
07_mlflow_llm_jude/: data_cleaning.ipynb  email_extractor.ipynb  mlflow.db  prompt_creation.ipynb
09_lancedb/: constants.py  lancedb_basics.ipynb
09_lancedb/knowledge_base/animals_text.lance/_transactions/: 0-6195a47c-72ac-4879-999b-10ecfbd50320.txn  1-260f342a-8971-4248-9958-489919c60624.txn  2-4672f981-d889-42e6-940c-7aa714ad5783.txn
09_lancedb/knowledge_base/jokes.lance/_transactions/: 0-e99c25b0-3195-462f-8ceb-b2283c0b8f14.txn  1-acf4a5f9-d1e6-42da-ad13-5993ed3e11bd.txn  2-d57ba165-acf7-474f-82b6-4b30448f6007.txn
exercise_0/: exercise_0.ipynb  exercise_1.ipynb
exercise_0/data/: job_ad_1.md  job_ad_2.md  job_ad_3.md  products.json
