[project]
name = "llmops-haza-ijan-mlo24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "ipykernel>=7.2.0",
    "lancedb==0.17",
    "mlflow>=3.11",
    "pandas<3",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.77.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
]
